[gd_scene load_steps=5 format=3 uid="uid://lxwwls8x1d4c"]

[ext_resource type="Script" uid="uid://s862amijhxfj" path="res://the_menu/game_initialization_state_ui.gd" id="1_58jx2"]
[ext_resource type="PackedScene" uid="uid://ddm72evk1kvd4" path="res://the_menu/game_initialization_uis/play_area_init_ui.tscn" id="2_13jdp"]
[ext_resource type="PackedScene" uid="uid://y4hsmt8l0vf7" path="res://the_menu/game_initialization_uis/value_setter_ui.tscn" id="3_7nt8r"]
[ext_resource type="Script" uid="uid://b7ueblu5gpc7s" path="res://the_menu/game_initialization_uis/play_area_init_ui.gd" id="3_scqxh"]

[node name="GameInitializationState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58jx2")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1
vertical = true

[node name="PlayAreaInitUI" parent="BoxContainer" instance=ExtResource("2_13jdp")]
layout_mode = 2
script = ExtResource("3_scqxh")

[node name="GameSpeedInitUI" parent="BoxContainer" instance=ExtResource("3_7nt8r")]
layout_mode = 2
label_text = "Game update speed (ticks per second)"
max_value = 20.0
step = 0.1
spinbox_suffix = "ticks per second"

[node name="AppleInitUI" parent="BoxContainer" instance=ExtResource("3_7nt8r")]
layout_mode = 2
label_text = "Maximum number of apples allowed to exist"
min_value = 1.0
max_value = 10.0
default_value = 1.0
spinbox_suffix = "apples"
